# datafusion-multiple-join-bug-example

./: Cargo.toml
bag.parquet/: part-0.parquet
metadata.parquet/: part-0.parquet
service_article.parquet/: part-0.parquet
src/: main.rs
